--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -7,16 +7,16 @@
 
 /* HERO SECTION */
 .hero {
-    background: url('../../../public/brands/mirrored_image.png') center/cover;
-    height: 80vh; /* Aumentamos la altura */
+    background: url('../../../public/brands/mirrored_image.png') center/cover ;
+    height: 100vh; 
     display: flex;
     align-items: center;
-    justify-content: flex-start; /* Alineamos el contenido a la izquierda */
+    justify-content: flex-start; 
     position: relative;
     
 }
 
-/* Degradado en la izquierda para mejorar el contraste */
+
 .hero-overlay {
     width: 50%;
     height: 100%;
@@ -291,22 +291,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 .review-card {
     background: white;
     color: black;
-    padding: 25px;
+    padding: 125px;
     border-radius: 15px;
-    width: 400px;
+    width: 300px;
     text-align: center;
+    font-size: 1.2rem;
 }
 
 .client-photo {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
+    width: 50%;
+    height: 50%px;
+    border-radius: 40%;
     margin-bottom: 10px;
 }
 
