update responsive into contact and home views

--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -6,12 +6,14 @@
     color: white;
     animation: fadeIn 0.8s ease-in-out;
 }
+
 /* Animación de fadeIn */
 @keyframes fadeIn {
     from {
         opacity: 0;
         transform: translateY(-20px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -46,22 +48,21 @@
     flex-wrap: wrap;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
-    transition: all 0.3s ease-in-out;
-    animation: fadeIn 1s ease-in-out; /* 👈 También para el contenedor */
+    animation: fadeIn 1s ease-in-out;
 }
 
 /* FORMULARIO */
 .contact-form {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: clamp(15px, 3vw, 27px);
     background: #ffffff;
     padding: 30px;
     border-radius: 10px;
     width: 100%;
     max-width: 400px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-    animation: fadeIn 1.2s ease-in-out; /* 👈 FadeIn más lento para el formulario */
+    animation: fadeIn 1.2s ease-in-out;
 }
 
 /* GRUPO DE INPUTS */
@@ -89,6 +90,7 @@
     font-size: 1rem;
     outline: none;
 }
+
 .contact-form textarea {
     height: 120px;
     resize: none;
@@ -117,7 +119,7 @@
 .contact-info {
     text-align: left;
     max-width: 400px;
-    animation: fadeIn 1.4s ease-in-out; /* 👈 FadeIn más lento para un efecto gradual */
+    animation: fadeIn 1.4s ease-in-out;
 }
 
 .contact-info h3 {
